ADD_LIBRARY(shift_ack SHARED shift_ack.cc)
ADD_LIBRARY(fake_seq SHARED fake_seq.cc)
ADD_LIBRARY(fake_window SHARED fake_window.cc)

INSTALL(TARGETS shift_ack
        DESTINATION ${CMAKE_INSTALL_PREFIX}/lib/${PROJECT_NAME}
        PERMISSIONS OWNER_READ GROUP_READ WORLD_READ)

INSTALL(TARGETS fake_seq
        DESTINATION ${CMAKE_INSTALL_PREFIX}/lib/${PROJECT_NAME}
        PERMISSIONS OWNER_READ GROUP_READ WORLD_READ)

INSTALL(TARGETS fake_window
        DESTINATION ${CMAKE_INSTALL_PREFIX}/lib/${PROJECT_NAME}
        PERMISSIONS OWNER_READ GROUP_READ WORLD_READ)
